k8s-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-python-app
  namespace: l1-app-ai
spec:
  containers:
    - name: node-python-app
      image: default-route-openshift-image-registry.apps.rhoсp.hcltech.com/l1-app-ai/node-python-app:latest
      ports:
        - containerPort: 3000
  imagePullSecrets:
    - name: l1-app-secret
